# litellm-vuln-scanner

./: .gitignore  README.md  pyproject.toml
.claude/skills/pin-litellm/: SKILL.md
src/litellm_vuln_scanner/: __init__.py  cli.py  scanner.py
