[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litellm-vuln-scanner"
version = "0.1.0"
description = "Scan GitHub repos for litellm supply chain compromise (CVE: v1.82.7, v1.82.8)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13",
]

[project.scripts]
litellm-scan = "litellm_vuln_scanner.cli:app"

[project.urls]
"Issue Reference" = "https://github.com/BerriAI/litellm/issues/24518"

[tool.hatch.build.targets.wheel]
packages = ["src/litellm_vuln_scanner"]
