[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "litellm-vuln-scanner"
version = "0.1.0"
description = "Scan GitHub repos for litellm supply chain compromise (CVE: v1.82.7, v1.82.8)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "typer==0.15.2",
    "httpx==0.28.1",
    "rich==13.9.4",
]

[project.scripts]
litellm-scan = "litellm_vuln_scanner.cli:app"

[project.urls]
"Issue Reference" = "https://github.com/BerriAI/litellm/issues/24518"

[tool.hatch.build.targets.wheel]
packages = ["src/litellm_vuln_scanner"]

[dependency-groups]
dev = [
    "pytest==8.3.5",
]
